// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardLayout should display tenants in the tenant dropdown: tenant dropdown 1`] = `
<select>
  <option
    value="00000000-0000-0000-0000-000000000001"
  >
    Test Tenant
  </option>
  <option
    value="00000000-0000-0000-0000-000000000002"
  >
    Test Tenant 2
  </option>
</select>
`;

exports[`DashboardLayout should display tenants in the tenant dropdown: tenant option - Test Tenant 1`] = `
<option
  value="00000000-0000-0000-0000-000000000001"
>
  Test Tenant
</option>
`;

exports[`DashboardLayout should display tenants in the tenant dropdown: tenant option - Test Tenant 2 1`] = `
<option
  value="00000000-0000-0000-0000-000000000002"
>
  Test Tenant 2
</option>
`;
